# log-analyzer-openenv

./: Dockerfile  README.md  baseline_results.json  final_results.json  inference.py  openenv.yaml  prepare_data.py  pyproject.toml  requirements.txt
data/raw/: HDFS_2k.log.txt  HDFS_2k_log_structured.csv
env/: environment.py  models.py
env/data/task1/: ground_truth.json  logs.txt
env/data/task2/: ground_truth.json  logs.txt
env/data/task3/: ground_truth.json  logs.txt
env/tasks/: task1_warning_detection.py  task2_anomaly_classification.py  task3_root_cause_analysis.py
server/: app.py
